Updated index page to use Conse base template. Updated styles in line with posts bundle.

--- a/Resources/public/less/console.less
+++ b/Resources/public/less/console.less
@@ -91,6 +91,22 @@ footer {
     background: rgb(66, 184, 221); /* this is a light blue */
 }
 
+.pure-button.xsmall {
+    font-size: 70%;
+}
+
+.pure-button.small {
+    font-size: 85%;
+}
+
+.pure-button.large {
+    font-size: 110%;
+}
+
+.pure-button.xlarge {
+    font-size: 125%;
+}
+
 /* =============================================================================
    Forms
    ========================================================================== */
@@ -149,6 +165,12 @@ div.form-actions {
     display: inline;
     float: right;
 }
+ul.actions {
+    list-style: none;
+}
+    ul.actions li {
+        display: inline-block;
+    }
 
 /* =============================================================================
    Alerts
@@ -291,6 +313,10 @@ li.pure-menu-open ul.pure-menu-children {
 
 .pure-table .title {
     width: 65%;
+}
+
+.pure-table td.update .pure-button {
+    width: 100%;
 }
 
 /* =============================================================================
