Updated to include FontAwesome and included it in the layout styles.

--- a/Resources/public/less/console.less
+++ b/Resources/public/less/console.less
@@ -4,6 +4,8 @@
    @author Antelope Studios
    ========================================================================== */
 
+@import "fonts.less";
+@import (less) "../css/font-awesome.css";
 @import "variables.less";
 @import "mixins.less";
 
