Updated login page to include header. Added css file into assetic list.

--- a/Resources/views/Security/login.html.twig
+++ b/Resources/views/Security/login.html.twig
@@ -6,9 +6,7 @@
 <div class="pure-u-1">
     <div class="login">
 
-        <header class="login-header">
-            <h2>Console Login</h2>
-        </header>
+        {{ topHeader() }}
 
         <div class="l-box">
             {% if error %}
