--- a/Resources/public/less/variables.less
+++ b/Resources/public/less/variables.less
@@ -28,6 +28,7 @@
 // -------------------------
 
 @sansFontFamily:        "Open Sans", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+@sansFontFamilyLight:   "Open Sans Light", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
 @serifFontFamily:       "Droid Serif", Georgia, "Times New Roman", Times, serif;
 @monoFontFamily:        Monaco, Menlo, Consolas, "Courier New", monospace;
 
