--- a/Resources/views/layout.html.twig
+++ b/Resources/views/layout.html.twig
@@ -2,6 +2,8 @@
 
 {% block head_style %}
 {% stylesheets filter='less,cssembed,?yui_css'
+    'http://fonts.googleapis.com/css?family=Droid+Serif:400,700|Open+Sans:300light,400,700'
+    '//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css'
     '@ManhattanConsoleBundle/Resources/public/css/normalize.css'
     '@ManhattanConsoleBundle/Resources/public/css/buttons.css'
     '@ManhattanConsoleBundle/Resources/public/css/forms.css'
