--- a/Resources/views/Profile/show_content.html.twig
+++ b/Resources/views/Profile/show_content.html.twig
@@ -1,17 +1,42 @@
-<table class="record_properties table table-bordered table-striped">
-    <tbody>
-        <tr>
-            <th>{{ 'profile.show.username'|trans({}, 'FOSUserBundle') }}</th>
-            <td>{{ user.username }}</td>
-        </tr>
-        <tr>
-            <th>{{ 'profile.show.email'|trans({}, 'FOSUserBundle') }}</th>
-            <td>{{ user.email }}</td>
-        </tr>
-    </tbody>
-</table>
+{% extends "ManhattanConsoleBundle:Console:template.html.twig" %}
 
-<div class="form-actions">
-    <a href="{{ path('fos_user_profile_edit') }}" class="btn">Edit Profile</a>
-    <a href="{{ path('fos_user_change_password') }}" class="btn">Change Password</a>
+{% block title %}Console: Profile | View Profile{% endblock title %}
+{% block template_title %}Console: View Profile{% endblock template_title %}
+{% block breadcrumbs %}<li><a href="{{ path('console_index') }}">Console</a></li><li class="current"><a href="{{ path('fos_user_profile_show') }}">View Profile</a></li>{% endblock breadcrumbs %}
+
+{% block template_console %}
+
+<div class="pure-g-r">
+    <div class="pure-u-3-4">
+
+        <div class="l-box">
+
+            <table class="pure-table">
+                <tbody>
+                    <tr>
+                        <th>{{ 'profile.show.username'|trans({}, 'FOSUserBundle') }}</th>
+                        <td>{{ user.username }}</td>
+                    </tr>
+                    <tr>
+                        <th>{{ 'profile.show.email'|trans({}, 'FOSUserBundle') }}</th>
+                        <td>{{ user.email }}</td>
+                    </tr>
+                </tbody>
+            </table>
+
+            <div class="form-actions">
+                <a href="{{ path('fos_user_profile_edit') }}" class="pure-button pure-button-secondary">Edit Profile</a>
+                <a href="{{ path('fos_user_change_password') }}" class="pure-button pure-button-secondary">Change Password</a>
+            </div>
+        </div>
+
+    </div>
+
+    <div class="pure-u-1-4">
+        <div class="l-box">
+
+        </div>
+    </div>
 </div>
+
+{% endblock template_console %}
