Updated styles for checkboxes. Updated menu to display the admin menu for creating Users. Updated internal console templates for adding user.

--- a/Resources/public/less/console.less
+++ b/Resources/public/less/console.less
@@ -150,7 +150,8 @@ footer {
 .pure-form label {
     font-weight: 700;
 }
-.pure-radio input {
+.pure-radio input,
+.pure-checkbox input {
     margin-right: @baseSpacing
 }
 .pure-form p.muted {
