--- a/Resources/public/less/variables.less
+++ b/Resources/public/less/variables.less
@@ -13,8 +13,9 @@
 
 @aquaBlue:                   #0E90D2;
 @lightBlue:                  #1B98F8;
-@darkBlue:                   rgb(37, 42, 58);
-@blueFocus:                  rgb(55, 60, 90);
+@darkBlue:                   rgb(66, 84, 112);
+@blueFocus:                  rgb(85, 108, 144);
+@blueHeader:                 #283244;
 
 @yellow:                     #FAD232;
 @orange:                     #F37B1D;
