--- a/Resources/public/less/console.less
+++ b/Resources/public/less/console.less
@@ -321,7 +321,10 @@ li.pure-menu-open ul.pure-menu-children {
 .pure-menu.pure-menu-open {
     background-color: @darkBlue;
 }
-#user-menu { margin-top: @baseSpacing }
+#user-menu {
+    margin-top: @baseSpacing;
+    margin-bottom: @baseSpacing*2;
+}
 
 /* =============================================================================
    Main
