--- a/Resources/public/less/console.less
+++ b/Resources/public/less/console.less
@@ -142,6 +142,30 @@ footer {
     padding: @baseSpacing/2;
 }
 
+.pure-form input[type="file"] {
+    font-size: 100%;
+    *font-size: 90%; /*IE 6/7 - To reduce IE's oversized button text*/
+    *overflow: visible; /*IE 6/7 - Because of IE's overly large left/right padding on buttons */
+    padding: 0.5em 1.5em 0.5em;
+    color: #444; /* rgba not supported (IE 8) */
+    color: rgba(0, 0, 0, 0.80); /* rgba supported */
+    *color: #444; /* IE 6 & 7 */
+    border: 1px solid #999;  /*IE 6/7/8*/
+    border: none rgba(0, 0, 0, 0);  /*IE9 + everything else*/
+    background-color: #E6E6E6;
+    text-decoration: none;
+    border-radius: 2px;
+    -webkit-font-smoothing: antialiased;
+    /* Transitions */
+    -webkit-transition: 0.1s linear -webkit-box-shadow;
+    -moz-transition: 0.1s linear -moz-box-shadow;
+    -ms-transition: 0.1s linear box-shadow;
+    -o-transition: 0.1s linear box-shadow;
+    transition: 0.1s linear box-shadow;
+    background-color: rgb(0, 120, 231);
+    color: #fff;
+}
+
 .pure-control-group {
     position: relative;
     display: inline-block;
@@ -185,6 +209,20 @@ ul.actions {
     ul.actions li {
         display: inline-block;
     }
+
+/* Form Help
+   ----------- */
+
+div.help {
+    padding: 0;
+}
+
+div.help p {
+    font-size: 0.8em;
+    color: @midGrey;
+    padding: 0 @baseSpacing;
+    margin: 0;
+}
 
 /* =============================================================================
    Alerts
