Added class to attribute merge instead of directly. Updated styles for time widget.

--- a/Resources/public/less/console.less
+++ b/Resources/public/less/console.less
@@ -196,18 +196,19 @@ footer {
         width: 100%;
     }
 
-    .pure-form .datetime .date select {
+    .pure-form div.date select {
         width: 30%;
     }
-    .pure-form .datetime .time select {
+    .pure-form div.time select {
         width: 40%;
     }
-    .pure-form .datetime .time span {
+    .pure-form div.time span {
         display: block;
         float: left;
         padding: 10px 15px 10px 0;
     }
-    .pure-form .datetime select {
+    .pure-form .datetime select,
+    .pure-form .date select {
         float: left;
         margin-right: @baseSpacing;
     }
