Updated alert and layout styles.

--- a/Resources/views/Console/template.html.twig
+++ b/Resources/views/Console/template.html.twig
@@ -10,7 +10,7 @@
         </div>
     </header>
 
-    <div>
+    <div class="operation-panel">
         {% block template_console %}
         Template Content
         {% endblock template_console %}
