--- a/Resources/public/less/console.less
+++ b/Resources/public/less/console.less
@@ -52,6 +52,13 @@ body,
     padding: 1.3em;
 }
 
+.right {
+    float: right;
+}
+.left {
+    float: left;
+}
+
 /* =============================================================================
    Fonts
    ========================================================================== */
@@ -121,6 +128,8 @@ footer {
 /* =============================================================================
    Forms
    ========================================================================== */
+.pure-form { position: relative }
+
 
 .pure-form input[type="text"],
 .pure-form input[type="password"],
@@ -162,7 +171,7 @@ footer {
     -ms-transition: 0.1s linear box-shadow;
     -o-transition: 0.1s linear box-shadow;
     transition: 0.1s linear box-shadow;
-    background-color: rgb(0, 120, 231);
+    background-color: rgb(204, 204, 204);
     color: #fff;
 }
 
@@ -246,6 +255,17 @@ div.help p {
     margin: 0;
 }
 
+/* Form Images
+   ----------- */
+.pure-form .preview {
+    display: inline-block;
+    float: left;
+    padding: 0 @baseSpacing;
+}
+    .pure-form .preview img {
+        display: inline-block;
+    }
+
 /* =============================================================================
    Alerts
    ========================================================================== */
@@ -262,9 +282,13 @@ div.alert {
         color: @red;
         .bgfade(@red, 0.1);
     }
+    div.alert.warning {
+        border-color: @orange;
+        color: @orange;
+        .bgfade(@orange, 0.1);
+    }
 
 ul.errors {
-    position: absolute;
     list-style: none;
     color: @red;
     padding: 0;
@@ -273,6 +297,9 @@ ul.errors {
     right: 0;
 }
 
+.pure-control-group ul.errors {
+    position: absolute;
+}
 
 .pure-control-group.error label {
     color: @red
@@ -404,6 +431,10 @@ li.pure-menu-open ul.pure-menu-children {
         font-family: @sansFontFamily;
         color: @midGrey;
     }
+
+#internal .operation-panel {
+    padding: 0 @baseSpacing;
+}
 
 #internal table {
     margin: 0 auto;
