Updated button colour.

--- a/Resources/public/less/console.less
+++ b/Resources/public/less/console.less
@@ -88,7 +88,7 @@ footer {
 .pure-button-error,
 .pure-button-warning,
 .pure-button-secondary {
-    color: white;
+    color: white !important;
     border-radius: 4px;
     text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
 }
