Added error styles

--- a/Resources/public/less/console.less
+++ b/Resources/public/less/console.less
@@ -310,6 +310,12 @@ ul.errors {
     position: absolute;
 }
 
+ul.errors li {
+    display: inline-block;
+    width: 100%;
+    padding-bottom: @baseSpacing/2;
+}
+
 .pure-control-group.error label {
     color: @red
 }
