Corrected issue to direct img gliphs to correct filepath.

--- a/Resources/public/less/bootstrap.less
+++ b/Resources/public/less/bootstrap.less
@@ -3,8 +3,8 @@
 @import "../../../../../../../../mopa/bootstrap-bundle/Mopa/Bundle/BootstrapBundle/Resources/bootstrap/less/bootstrap.less";
 
 // variables
-@iconSpritePath:       "/../img/glyphicons-halflings.png";
-@iconWhiteSpritePath:  "/../img/glyphicons-halflings-white.png";
+@iconSpritePath:       "../img/glyphicons-halflings.png";
+@iconWhiteSpritePath:  "../img/glyphicons-halflings-white.png";
 
 // The Paginator less for MopaBootstrapBundle
 @import "../../../../../../../../mopa/bootstrap-bundle/Mopa/Bundle/BootstrapBundle/Resources/public/less/paginator.less";
