Update to allow external configuration of the Email setup.
Updated to set the console index from the main configuration.

--- a/Resources/views/Registration/email.txt.twig
+++ b/Resources/views/Registration/email.txt.twig
@@ -204,7 +204,10 @@ body, td { font-family: 'Helvetica Neue', Arial, Helvetica, Geneva, sans-serif; 
                                         <multiline label="Description">An account has been added for this email address to use the {{ console_name }} Console.</multiline>
                                     </div>
                                     <div class="article-content" align="left">
-                                        <multiline label="Description">To set your password and gain access to the console follow this link: <a href="{{ url }}">{{ url }} &raquo;</a></multiline>
+                                        <multiline label="Description">To set your password and gain access to the console follow this link:</multiline>
+                                    </div>
+                                    <div class="article-content" align="left">
+                                        <multiline label="Description"><a href="{{ url }}">{{ url }} &raquo;</a></multiline>
                                     </div>
                                     <p class="article-title" align="left"><singleline label="Title">- {{ console_name }}</singleline></p>
                                 </td>
