Extended the Bundle to allow additional route parameters to be added to the Twig navigation partial.
Updated configuration to allow route parameters.
Updated template to allow route parameters.
Updated services include to parameters.

--- a/Resources/views/Twig/shared.html.twig
+++ b/Resources/views/Twig/shared.html.twig
@@ -1,7 +1,7 @@
 {% block topHeader %}
 {% spaceless %}
 <header>
-    <a href="{{ path(navigation.route) }}"><h2>{{ navigation.title }}</h2></a>
+    <a href="{{ path(navigation.route.link, navigation.route.parameters) }}"><h2>{{ navigation.title }}</h2></a>
 </header>
 {% endspaceless %}
 {% endblock %}
