--- a/Resources/views/User/passwordset.html.twig
+++ b/Resources/views/User/passwordset.html.twig
@@ -11,7 +11,7 @@
         <div class="l-box">
             <p>Please set your password for accessing the Console.</p>
 
-            <form action="{{ path('console_users_password_set', {'token': token}) }}" {{ form_enctype(form) }} method="POST" class="pure-form" novalidate>
+            <form action="{{ path('console_users_password_set', { 'subdomain': subdomain, 'token': token}) }}" {{ form_enctype(form) }} method="POST" class="pure-form" novalidate>
                 {{ form_widget(form) }}
 
                 <div class="login-submit pure-control-group">
