--- a/Resources/views/ChangePassword/changePassword.html.twig
+++ b/Resources/views/ChangePassword/changePassword.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Console: Profile | Change Password{% endblock title %}
 {% block template_title %}Console: Change Password{% endblock template_title %}
-{% block breadcrumbs %}<li><a href="{{ path('console_index') }}">Console</a></li><li class="current"><a href="{{ path('fos_user_change_password') }}">Change Password</a></li>{% endblock breadcrumbs %}
+{% block breadcrumbs %}<li><a href="{{ path('console_index', { 'subdomain': subdomain }) }}">Console</a></li><li class="current"><a href="{{ path('fos_user_change_password', { 'subdomain': subdomain }) }}">Change Password</a></li>{% endblock breadcrumbs %}
 
 {% block template_console %}
 
@@ -11,12 +11,12 @@
 
         <div class="l-box">
 
-            <form action="{{ path('fos_user_change_password') }}" {{ form_enctype(form) }} method="POST" class="pure-form pure-form-stacked" novalidate>
+            <form action="{{ path('fos_user_change_password', { 'subdomain': subdomain }) }}" {{ form_enctype(form) }} method="POST" class="pure-form pure-form-stacked" novalidate>
 
                 {{ form_widget(form) }}
 
                 <div class="form-actions">
-                    <a href="{{ path('fos_user_profile_show') }}" class="pure-button">Back to Profile</a>
+                    <a href="{{ path('fos_user_profile_show', { 'subdomain': subdomain }) }}" class="pure-button">Back to Profile</a>
                     <input type="submit" class="pure-button pure-button-primary" value="{{ 'change_password.submit'|trans({}, 'FOSUserBundle') }}" />
                 </div>
             </form>
