--- a/Resources/views/Console/template.html.twig
+++ b/Resources/views/Console/template.html.twig
@@ -6,7 +6,7 @@
     <header>
         <h1>{% block template_title %}Console{% endblock template_title %}</h1>
         <div class="breadcrumbs">
-        <ul>{% block breadcrumbs %}<li><a href="{{ path('console_index') }}">Console</a></li>{% endblock breadcrumbs %}</ul>
+        <ul>{% block breadcrumbs %}<li><a href="{{ path('console_index', { 'subdomain': subdomain }) }}">Console</a></li>{% endblock breadcrumbs %}</ul>
         </div>
     </header>
 
