--- a/Resources/views/Resetting/reset.html.twig
+++ b/Resources/views/Resetting/reset.html.twig
@@ -14,7 +14,7 @@
 
             {% trans_default_domain 'FOSUserBundle' %}
 
-            <form action="{{ path('fos_user_resetting_reset', {'token': token}) }}" {{ form_enctype(form) }} method="POST" class="pure-form" novalidate>
+            <form action="{{ path('fos_user_resetting_reset', {'subdomain': subdomain, 'token': token}) }}" {{ form_enctype(form) }} method="POST" class="pure-form" novalidate>
 
                 {{ form_widget(form) }}
 
@@ -22,7 +22,7 @@
                     <input type="submit" class="pure-button pure-button-primary" value="{{ 'resetting.reset.submit'|trans }}" />
                 </div>
             </form>
-        </div>
+        </div>,
 
         <footer class="login-footer">
             Maintained by Antelope Studios, under MIT Licence.
