--- a/Resources/views/User/list.html.twig
+++ b/Resources/views/User/list.html.twig
@@ -2,7 +2,7 @@
 
 {% block template_title %}Console: Users{% endblock template_title %}
 {% block title %}Console: Users{% endblock title %}
-{% block breadcrumbs %}<li><a href="{{ path('console_index') }}">Console</a></li><li class="current"><a href="{{ path('console_users') }}">Users</a></li>{% endblock breadcrumbs %}
+{% block breadcrumbs %}<li><a href="{{ path('console_index', { 'subdomain': subdomain }) }}">Console</a></li><li class="current"><a href="{{ path('console_users', { 'subdomain': subdomain }) }}">Users</a></li>{% endblock breadcrumbs %}
 
 {% block template_console %}
 
@@ -19,7 +19,7 @@
     <tbody>
     {% for entity in entities %}
         <tr{% if loop.index is odd %} class="pure-table-odd"{% endif %}>
-            <td><a href="{{ path('console_users_edit', { 'id': entity.id }) }}">{{ entity.username }}</a></td>
+            <td><a href="{{ path('console_users_edit', { 'subdomain': subdomain, 'id': entity.id }) }}">{{ entity.username }}</a></td>
             <td>{{ entity.email }}</td>
             <td>{% spaceless %}
                 {% if entity.enabled %}
@@ -30,7 +30,7 @@
             {% endspaceless %}</td>
             <td>{{ entity.lastLogin|date('Y-m-d H:i:s') }}</td>
             <td>
-                <a href="{{ path('console_users_edit', { 'id': entity.id }) }}" class="pure-button pure-button-secondary small">edit</a>
+                <a href="{{ path('console_users_edit', { 'subdomain': subdomain, 'id': entity.id }) }}" class="pure-button pure-button-secondary small">edit</a>
             </td>
         </tr>
     {% endfor %}
@@ -38,7 +38,7 @@
 </table>
 
 <div class="l-box">
-    <a href="{{ path('console_users_new') }}" class="pure-button pure-button-primary">Register New User</a>
+    <a href="{{ path('console_users_new', { 'subdomain': subdomain }) }}" class="pure-button pure-button-primary">Register New User</a>
 </div>
 
 {% endblock template_console %}
