--- a/Resources/views/User/new.html.twig
+++ b/Resources/views/User/new.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Console: Posts | Create New{% endblock title %}
 {% block template_title %}Console: Posts{% endblock template_title %}
-{% block breadcrumbs %}<li><a href="{{ path('console_index') }}">Console</a></li><li><a href="{{ path('console_users') }}">Users</a></li><li class="current"><a href="{{ path('console_users_new') }}">Create New User</a></li>{% endblock breadcrumbs %}
+{% block breadcrumbs %}<li><a href="{{ path('console_index', { 'subdomain': subdomain }) }}">Console</a></li><li><a href="{{ path('console_users', { 'subdomain': subdomain }) }}">Users</a></li><li class="current"><a href="{{ path('console_users_new', { 'subdomain': subdomain }) }}">Create New User</a></li>{% endblock breadcrumbs %}
 
 {% block template_console %}
 
@@ -10,12 +10,12 @@
     <div class="pure-u-3-4">
 
         <div class="l-box">
-            <form action="{{ path('console_users_create') }}" class="pure-form pure-form-stacked" method="post" {{ form_enctype(form) }} novalidate>
+            <form action="{{ path('console_users_create', { 'subdomain': subdomain }) }}" class="pure-form pure-form-stacked" method="post" {{ form_enctype(form) }} novalidate>
 
                 {{ form_widget(form) }}
 
                 <div class="form-actions">
-                    <a href="{{ path('console_users') }}" class="pure-button ">Back to the list</a>
+                    <a href="{{ path('console_users', { 'subdomain': subdomain }) }}" class="pure-button ">Back to the list</a>
                     <button type="submit" class="pure-button pure-button-primary">Create</button>
                 </form>
             </div>
