Added Resetting Listener for adding subdomain to resetting links.
Updated config to remove some of the settings now that the FOS Userbundle must be loaded earlier in AppKernel.
Added service definitions to setup.
Updated button translations reference in passwordset template.

--- a/Resources/views/User/passwordset.html.twig
+++ b/Resources/views/User/passwordset.html.twig
@@ -15,7 +15,7 @@
                 {{ form_widget(form) }}
 
                 <div class="login-submit pure-control-group">
-                    <input type="submit" class="pure-button pure-button-primary" value="{{ 'resetting.create.submit'|trans({}, 'FOSUserBundle') }}" />
+                    <input type="submit" class="pure-button pure-button-primary" value="{{ 'resetting.reset.submit'|trans({}, 'FOSUserBundle') }}" />
                 </div>
 
             </form>
