Added Mootools as the base javascript library.

--- a/Resources/views/base.html.twig
+++ b/Resources/views/base.html.twig
@@ -81,8 +81,8 @@
      #}
 
     {% javascripts
-        'http://yui.yahooapis.com/3.13.0/build/yui/yui-min.js'
-        '@ManhattanConsoleBundle/Resources/public/js/yui/mainmenu.js'
+        '@ManhattanConsoleBundle/Resources/public/js/mootools/mootools-core-1.4.5-full-nocompat.js'
+        '@ManhattanConsoleBundle/Resources/public/js/mootools/mootools-more-1.4.0.1.js'
     %}
         <script type="text/javascript" src="{{ asset_url }}"></script>
 {% endjavascripts %}
