Updated collection field display to include formatting and moving of the options about so looks nice.

--- a/Resources/public/less/console.less
+++ b/Resources/public/less/console.less
@@ -86,36 +86,37 @@ footer {
     background-color: @lightGrey;
 }
 
+.pure-button,
 .pure-button-success,
-.pure-button.success,
 .pure-button-error,
-.pure-button.error,
 .pure-button-warning,
-.pure-button.warning,
-.pure-button-secondary,
-.pure-button.secondary {
+.pure-button-secondary {
     color: white !important;
     border-radius: 4px;
     text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
 }
 
 .pure-button-success,
-.pure-button.success {
+.pure-button.success,
+.pure-button.add {
     background: rgb(28, 184, 65); /* this is a green */
 }
 
 .pure-button-error,
-.pure-button.error {
+.pure-button.error,
+.pure-button.delete {
     background: rgb(202, 60, 60); /* this is a maroon */
 }
 
 .pure-button-warning,
-.pure-button.warning {
+.pure-button.warning,
+.pure-button.remove {
     background: rgb(223, 117, 20); /* this is an orange */
 }
 
 .pure-button-secondary,
-.pure-button.secondary {
+.pure-button.secondary,
+.pure-button.return {
     background: rgb(66, 184, 221); /* this is a light blue */
 }
 
