--- a/Resources/views/Twig/collection_fields.html.twig
+++ b/Resources/views/Twig/collection_fields.html.twig
@@ -27,7 +27,7 @@
                     </div>
                     <div class="controls">
                         {#<a class="add pure-button" title="Add" href="javascript:void()"><span>Add</span></a>#}
-                        <a class="remove pure-button" title="Remove" href="javascript:void()"><span>Remove</span></a>
+                        <a class="remove pure-button small" title="Remove" href="javascript:void()"><span>Remove</span></a>
                     </div>
                 </div>
             {% endfor %}
@@ -63,7 +63,7 @@
         </div>
         <div class="controls">
             {#<a class="add pure-button" title="Add" href="javascript:void()"><span>Add</span></a>#}
-            <a class="remove pure-button" title="Remove" href="javascript:void()"><span>Remove</span></a>
+            <a class="remove pure-button small" title="Remove" href="javascript:void()"><span>Remove</span></a>
         </div>
     </div>
 {% endspaceless %}
