--- a/Resources/public/less/fonts.less
+++ b/Resources/public/less/fonts.less
@@ -5,7 +5,7 @@
   src: local('Droid Serif'), local('DroidSerif'), url('../fonts/droid-serif.woff') format('woff');
 }
 @font-face {
-  font-family: 'Droid Serif';
+  font-family: 'Droid Serif Bold';
   font-style: normal;
   font-weight: 700;
   src: local('Droid Serif Bold'), local('DroidSerif-Bold'), url('../fonts/droid-serif-bold.woff') format('woff');
@@ -17,13 +17,13 @@
   src: local('Open Sans'), local('OpenSans'), url('../fonts/open-sans.woff') format('woff');
 }
 @font-face {
-  font-family: 'Open Sans';
+  font-family: 'Open Sans Light';
   font-style: normal;
   font-weight: 300;
   src: local('Open Sans Light'), local('OpenSans-Light'), url('../fonts/open-sans-light.woff') format('woff');
 }
 @font-face {
-  font-family: 'Open Sans';
+  font-family: 'Open Sans Semibold';
   font-style: normal;
   font-weight: 600;
   src: local('Open Sans Semibold'), local('OpenSans-Semibold'), url('../fonts/open-sans-semibold.woff') format('woff');
