--- a/Resources/public/less/console.less
+++ b/Resources/public/less/console.less
@@ -4,7 +4,7 @@
    @author Antelope Studios
    ========================================================================== */
 
-/* @import "fonts.less";*/
+@import "fonts.less";
 @import "variables.less";
 @import "mixins.less";
 
