--- a/Resources/views/base.html.twig
+++ b/Resources/views/base.html.twig
@@ -83,6 +83,7 @@
     {% javascripts
         '@ManhattanConsoleBundle/Resources/public/js/mootools/mootools-core-1.4.5-full-nocompat.js'
         '@ManhattanConsoleBundle/Resources/public/js/mootools/mootools-more-1.4.0.1.js'
+        '@ManhattanConsoleBundle/Resources/public/js/mootools/SymfonyApplication.js'
     %}
         <script type="text/javascript" src="{{ asset_url }}"></script>
 {% endjavascripts %}
