--- a/Resources/public/less/console.less
+++ b/Resources/public/less/console.less
@@ -560,6 +560,10 @@ li.pure-menu-open ul.pure-menu-children {
     width: 100%;
 }
 
+.pure-table.full {
+    width: 100%;
+}
+
 /* =============================================================================
    Documents
    ========================================================================== */
